<resources>
    <string name="app_name">Pomodoro Timer</string>
    <string name="work">Work</string>
    <string name="short_break">Short Break</string>
    <string name="long_break">Long Break</string>
    <string name="time">%1$02d:%2$02d</string>
    <string name="end">End</string>
    <string name="pause_timer">Pause Timer</string>
    <string name="resume_timer">Resume Timer</string>
    <string name="timer_over">%1$s Timer is Over!</string>
    <string name="action_settings">Settings</string>
    <string name="coming_soon">Feature Coming Soon!</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="work_time_key">work_time</string>
    <string name="short_break_time_key">short_break_time</string>
    <string name="long_break_time_key">long_break_time</string>
</resources>
