<!--
  ~ Copyright 2018 The app Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <EditTextPreference
        android:defaultValue="25"
        android:key="@string/work_time_key"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/work"
        android:inputType="number"/>

    <EditTextPreference
        android:defaultValue="5"
        android:key="@string/short_break_time_key"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/short_break"
        android:inputType="number"/>

    <EditTextPreference
        android:defaultValue="10"
        android:key="@string/long_break_time_key"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/long_break"
        android:inputType="number"/>


</PreferenceScreen>
