<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ChooseNextTimerActivity">

    <TextView
        android:id="@+id/nextPromptTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/next_question"
        android:textSize="20sp"
        android:layout_marginTop="120dp"
        android:layout_centerHorizontal="true"/>

    <LinearLayout
        android:id="@+id/buttonsLinearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@id/nextPromptTextView"
        android:layout_marginTop="60dp"
        android:layout_centerHorizontal="true">

        <Button
            android:id="@+id/workButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/work"
            android:elevation="4dp"/>

        <Button
            android:id="@+id/shortBreakButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/short_break"
            android:elevation="4dp"
            android:layout_marginTop="20dp"/>

        <Button
            android:id="@+id/longBreakButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/long_break"
            android:elevation="4dp"
            android:layout_marginTop="20dp"/>
    </LinearLayout>
</RelativeLayout>